--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/graphql": "^14.0.7",
     "@types/graphql-iso-date": "^3.3.3",
     "@types/jsonwebtoken": "^8.3.5",
+    "apollo-graphql": "^0.4.3",
     "apollo-server-express": "^2.9.12",
     "apollo-server-module-graphiql": "^1.4.0",
     "axios": "^0.19.0",
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "nodemon": "^2.0.1",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.7",
     "subscriptions-transport-ws": "^0.9.16",
     "type-graphql": "^0.17.6"
