--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,15 +16,16 @@
     "pretty": true,
     "removeComments": true,
     "skipLibCheck": true,
+    "strictPropertyInitialization": false,
     "typeRoots": ["node_modules/@types", "src/@types"],
-    "lib": ["ES2016", "ESNext.AsyncIterable"],
-    "strictPropertyInitialization": false
+    "lib": ["es2015"]
   },
   "files": ["src/@types/graphql.d.ts"],
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/verifiedProspect/verifiedProspect.test.ts", "seeds/**/*", "migration/*"],
   "exclude": [
     "node_modules",
     "seedsBuild",
-    "build"
+    "build",
+    "**/*.spec.ts"
   ]
 }
