--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.7",
     "subscriptions-transport-ws": "^0.9.16",
-    "type-graphql": "^0.17.6"
+    "type-graphql": "^0.17.6",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
