--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "nodemon": "^2.0.1",
-    "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^4.2.0",
+    "sequelize": "^5.21.7",
     "subscriptions-transport-ws": "^0.9.16",
     "type-graphql": "^0.17.6",
     "typeorm": "^0.2.24"
@@ -71,7 +70,7 @@
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.8",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^10.1.4",
+    "@types/node": "10.1.4",
     "@types/webpack-env": "1.13.7",
     "@types/ws": "^5.1.1",
     "babel-core": "^7.0.0-0",
