--- a/package.json
+++ b/package.json
@@ -7,47 +7,29 @@
     "start": "node ./build/index.js",
     "lint": "tslint -p tsconfig.json",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc -p tsconfig.json && copyfiles -f src/schema.graphql build",
+    "build": "tsc -p tsconfig.json",
     "gcp-build": "npm run build",
     "serve": "nodemon",
-    "test": "mocha tests/*.test.js",
-    "stage": "gcloud app deploy app.staging.yaml --project template-apollo-server",
-    "deploy": "gcloud app deploy app.production.yaml --project <<Google Cloud Platform Production Project ID>>"
+    "test": "mocha tests/*.test.js"
   },
   "engines": {
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "@apollo/federation": "^0.11.2",
-    "@google-cloud/firestore": "^2.6.0",
     "@types/dotenv": "^6.1.1",
     "@types/graphql": "^14.0.7",
-    "@types/graphql-iso-date": "^3.3.3",
     "@types/jsonwebtoken": "^8.3.5",
-    "apollo-graphql": "^0.4.3",
     "apollo-server-express": "^2.9.12",
     "apollo-server-module-graphiql": "^1.4.0",
-    "axios": "^0.19.0",
-    "body-parser": "^1.18.3",
-    "clean": "^4.0.2",
-    "copyfiles": "^2.1.1",
-    "core-js-compat": "^3.4.7",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
-    "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
-    "faker": "^4.1.0",
     "graphql": "^14.6.0",
-    "graphql-import": "^0.7.1",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-tag": "2.10.1",
-    "graphql-tools": "4.0.4",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.6.0",
     "nodemon": "^2.0.1",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.7",
     "subscriptions-transport-ws": "^0.9.16",
     "type-graphql": "^0.17.6",
     "typeorm": "^0.2.24"
