--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/jsonwebtoken": "^8.3.5",
     "apollo-server-express": "^2.9.12",
     "apollo-server-module-graphiql": "^1.4.0",
+    "bcrypt": "^4.0.1",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -49,6 +51,7 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
     "@babel/runtime": "^7.7.4",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.8",
